Cropper.js fixes, preview removed, unit-tests updated

--- a/filer/private/sass/layout/_main.scss
+++ b/filer/private/sass/layout/_main.scss
@@ -165,33 +165,8 @@ body {
 .cropper-container {
     float: left;
 }
-.cropper-preview-container {
-    float: left;
-    width: 300px;
-}
-.cropper-preview {
-    float: left;
-    overflow: hidden;
-    margin: 0 10px 10px 0;
-    img {
-        max-width: 100%;
-    }
-}
-.cropper-preview-lg {
-    width: 180px;
-    height: 100px;
-}
-.cropper-preview-md {
-    width: 100px;
-    height: 50px;
-}
-.cropper-preview-sm {
-    width: 50px;
-    height: 30px;
-}
-.cropper-preview-xs {
-    width: 30px;
-    height: 30px;
+.cropper-dashed, .cropper-modal {
+    opacity: 0.2;
 }
 .full-size {
     clear: both;
